@@ -38,6 +38,7 @@ typedef enum {
     HTTP_STATUS_METHOD_NOT_ALLOWED = 405,
     HTTP_STATUS_PRECONDITION_FAILED = 412,
     HTTP_STATUS_REQUESTED_RANGE_NOT_SATISFIABLE = 416,
+    HTTP_STATUS_EXPECTATION_FAILED = 417,
     HTTP_STATUS_INTERNAL_SERVER_ERROR = 500,
     HTTP_STATUS_NOT_IMPLEMENTED = 501,
     HTTP_STATUS_BAD_GATEWAY = 502,
