@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.7.9) unstable; urgency=low
   * http-server: send "100 Continue" unless request body closed
   * http-client: poll socket after splice
   * http-server: handle EAGAIN after splice
+  * http-server: send a 417 response on unrecognized "Expect" request
 
  --
 
